# fin4py

./: README.md  example.py  example_backtesting.py  pyproject.toml  scrapy.cfg
fin4py/: backtesting.py  black_sholes.py  instruments.py
fin4py/crawlers/: settings.py
fin4py/crawlers/spiders/taifex/: future_etf_margining.py  future_stock_margining.py  option_etf_margining.py  option_stock_margining.py  stock_lists.py
fin4py/crawlers/spiders/twse/: investor.py  margin.py  quote.py  stock_info.py  warrant_info.py
