[project]
name = "fin4py"
version = "0.2.2"
description = "finance analysis and backtesting tools in python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pandas-datareader>=0.10.0",
    "scipy>=1.16.0",
    "scrapy>=2.13.2",
    "setuptools>=80.9.0",
]
